# pymkdownx-shell-ps1

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml  main.yml
src/superfences_ps1/: __init__.py  plugin.py
tests/: test_plugin.py
